# Splines

./: CMakeLists.txt  README.md  main.c  run.sh
libSplines/: CMakeLists.txt
libSplines/include/: basic_functions.h  basic_structs.h  splines.h
libSplines/src/: basic_functions.c  splines.c
